--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.2",
         "doctrine/dbal": "^4.0",
         "laravel/framework": "^11.9",
+        "laravel/telescope": "^5.1",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5"
     },
